--- a/style.css
+++ b/style.css
@@ -255,13 +255,7 @@ nav ul li a:hover::after{
 
 }
 
-.work-list{
-        display: grid;
-        grid-template-columns: repeat(minmax(250px, 1fr));
-        grid-gap: 40px;
-        margin-top: 50px;
 
-}
 /* ----------contact------ */
 .contact-left{
     flex-basis: 35%;
@@ -369,6 +363,13 @@ nav .fas{
         margin: 25px;
 
     }
+    .work-list{
+        display: grid;
+        grid-template-columns: repeat(1,minmax(250px, 1fr));
+        grid-gap: 40px;
+        margin-top: 50px;
+
+}
     nav ul .fas{
         position: absolute;
         top: 25px;
