--- a/style.css
+++ b/style.css
@@ -254,6 +254,27 @@ nav ul li a:hover::after{
     background: #ff004f;
 
 }
+.home-btn {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    /* background-color:black; */
+    color: #fff;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 50px;
+    font-size: 24px;
+    z-index: 1000;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    transition: background-color 0.3s, transform 0.3s;
+}
+
+.home-btn:hover {
+    background-color: ; /*#d40078 */
+    transform: scale(1.1);
+}
 
 
 /* ----------contact------ */
@@ -398,6 +419,13 @@ nav .fas{
     }
     .copyright{
         font-size: 14px;
+    }
+    .home-btn {
+        font-size: 20px;
+        width: 22px;
+        height: 40px;
+        line-height: 40px;
+        
     }
 }
 #msg{
